--- a/.gitignore
+++ b/.gitignore
@@ -1,43 +1,50 @@
+# EAGLE
+
+*.b#1
+*.b#2
+*.b#3
+*.b#4
+*.b#5
+*.b#6
+*.b#7
+*.b#8
+*.b#9
+*.s#1
+*.s#2
+*.s#3
+*.s#4
+*.s#5
+*.s#6
+*.s#7
+*.s#8
+*.s#9
+
+# GERBER
+
+*.GBL
+*.GBO
+*.GBS
+*.gpi
+*.dri
+*.GTL
+*.GTO
+*.GTP
+*.GTS
+*.TXT
+*.gm1
+*.gbp
+*.zip
+
+
+
+############
+## Windows
+############
+
 # Windows image file caches
 Thumbs.db
-ehthumbs.db
 
 # Folder config file
 Desktop.ini
 
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
 
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# =========================
-# Operating System Files
-# =========================
-
-# OSX
-# =========================
-
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Icon must end with two \r
-Icon
-
-# Thumbnails
-._*
-
-# Files that might appear on external disk
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
